.provarCaches/00Df2000001KKNJEA4/objects/INRF__Rule_Action__c.object
<CustomObject>
    <description>Related Actions to be performed for Rule Set if specified Rule Criteria satisfies in RuleForce.</description>
    <fields>
        <fullName>INRF__Action_Label__c</fullName>
        <description>Label for Rule Action</description>
        <inlineHelpText>Enter Label for Rule Action</inlineHelpText>
        <label>Action Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Action_Object__c</fullName>
        <description>Source SObject for performing action</description>
        <label>Action Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Action_Type__c</fullName>
        <description>Type of Action to perform</description>
        <label>Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update Field</fullName>
                </value>
                <value>
                    <fullName>Insert Related Object</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>Chatter Notification</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Invoke Apex</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Additional_Email__c</fullName>
        <description>Additional Emails (if any)</description>
        <label>Additional Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Child_Object__c</fullName>
        <label>Child Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Child_Relationship_Name__c</fullName>
        <label>Child Relationship Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Cross_Object_Field__c</fullName>
        <label>Cross Object Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Email_Template_Folder__c</fullName>
        <label>Email Template Folder</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Email_Template__c</fullName>
        <label>Email Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__External_Field_API_Name__c</fullName>
        <label>External Field API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__External_Id__c</fullName>
        <label>External Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Field_Apex_Type__c</fullName>
        <label>Field Apex Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STRING</fullName>
                    <default>true</default>
                    <label>STRING</label>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>PICKLIST</fullName>
                </value>
                <value>
                    <fullName>TEXTAREA</fullName>
                </value>
                <value>
                    <fullName>PHONE</fullName>
                </value>
                <value>
                    <fullName>BOOLEAN</fullName>
                </value>
                <value>
                    <fullName>DATE</fullName>
                </value>
                <value>
                    <fullName>DATETIME</fullName>
                </value>
                <value>
                    <fullName>CURRENCY</fullName>
                </value>
                <value>
                    <fullName>DOUBLE</fullName>
                </value>
                <value>
                    <fullName>ADDRESS</fullName>
                </value>
                <value>
                    <fullName>BASE64</fullName>
                </value>
                <value>
                    <fullName>INTEGER</fullName>
                </value>
                <value>
                    <fullName>LONG</fullName>
                </value>
                <value>
                    <fullName>MULTIPICKLIST</fullName>
                </value>
                <value>
                    <fullName>PERCENT</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>REFERENCEID</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Field_Name__c</fullName>
        <label>Field Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Field_Type__c</fullName>
        <label>Field Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INRF__From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INRF__Invoke_Apex__c</fullName>
        <label>Invoke Apex</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Is_Scheduled_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Scheduled Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INRF__Long_Value__c</fullName>
        <label>Long Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Notified_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notified User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rule_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INRF__Notify_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INRF__Number_of_Days_Hours__c</fullName>
        <label>Number of Days/Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INRF__Parent_Field_API_Name__c</fullName>
        <label>Parent Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Parent_Field__c</fullName>
        <label>Parent Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Reference_Id__c</fullName>
        <label>Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Rule_Object__c</fullName>
        <formula>INRF__Rule_Set__r.INRF__Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Rule_Set__c</fullName>
        <label>Rule Set</label>
        <referenceTo>INRF__Rule_Set__c</referenceTo>
        <relationshipLabel>Rule Actions</relationshipLabel>
        <relationshipName>Rule_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>INRF__Run_As_a_Queueable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run As a Queueable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INRF__Sequence__c</fullName>
        <description>After rule evaluation execution sequence number.</description>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INRF__Time_After_Before__c</fullName>
        <label>Time After/Before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>After</fullName>
                </value>
                <value>
                    <fullName>Before</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__Time_Interval_Day_Hour__c</fullName>
        <label>Time Interval (Day/Hour)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INRF__User_Owner_Id__c</fullName>
        <label>User/Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Value_Type__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enter Value</fullName>
                </value>
                <value>
                    <fullName>Field Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rule Action</label>
    <listViews>
        <fullName>INRF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>